Use a wrapper to run h2o
also, showing h2o --version gives us a peace of mind

--- a/gke/containers/h2o/Dockerfile
+++ b/gke/containers/h2o/Dockerfile
@@ -2,5 +2,6 @@ FROM alpine
 
 RUN mkdir -p /var/log/h2o && mkdir /var/spool/h2o && chown nobody /var/spool/h2o
 COPY h2o /
+COPY run-h2o.sh /
 VOLUME ["/etc/h2o", "/etc/ssl/certs"]
-ENTRYPOINT ["/h2o"]
+ENTRYPOINT ["/run-h2o.sh"]
