Let h2o serve the static files

--- a/gke/etc/adminweb-h2o-dev.conf
+++ b/gke/etc/adminweb-h2o-dev.conf
@@ -11,6 +11,8 @@ hosts:
     paths:
       "/":
         proxy.reverse.url: http://adminweb-internal.default.svc.cluster.local:5000/
+      "/static":
+        file.dir: /static-files/static
     listen:
       host: 0.0.0.0
       port: 443
