Open up port 80 for redirection

--- a/gke/etc/adminweb-h2o-dev.conf
+++ b/gke/etc/adminweb-h2o-dev.conf
@@ -7,6 +7,12 @@ pid-file: /var/spool/h2o/pid
 http2-reprioritize-blocking-assets: ON
 proxy.timeout.io: 30000
 hosts:
+  "admin.builderscon.io:80":
+    listen:
+      port: 80
+    paths:
+      "/":
+        redirect: https://admin.builderscon.io/
   "admin.builderscon.io:443":
     paths:
       "/":
