--- a/gke/images/adminweb/Makefile
+++ b/gke/images/adminweb/Makefile
@@ -1,4 +1,5 @@
 TOPDIR=$(CURDIR)/../../..
+BUILDER_IMAGE=octav/adminweb-builder
 REPOSITORY_HOST=asia.gcr.io
 PROJECT_ID=$(shell gcloud config list 2>&1 | grep 'project = ' | sed -e 's/project = //')
 CONTAINER=app
@@ -12,6 +13,19 @@ IMAGE_NAME:=$(REPOSITORY_HOST)/$(PROJECT_ID)/$(APPNAME):$(TAG)
 $(CURDIR)/cpanfile:
 	cp $(ADMINWEB_DIR)/cpanfile $(CURDIR)/cpanfile
 
+build-local-lib:
+	docker build -f Dockerfile.build -t octav/adminweb-builder .
+
+$(CURDIR)/perl.tar.gz: $(CURDIR)/adminweb-builder.cid
+	docker cp `cat adminweb-builder.cid`:/perl.tar.gz .
+
+$(CURDIR)/adminweb-local-lib.tar.gz: $(CURDIR)/adminweb-builder.cid
+	docker cp `cat adminweb-builder.cid`:/adminweb-local-lib.tar.gz .
+
+$(CURDIR)/adminweb-builder.cid: build-local-lib
+	@-rm adminweb-builder.cid
+	docker run --cidfile adminweb-builder.cid $(BUILDER_IMAGE)
+
 $(CURDIR)/adminweb.tar.gz: $(wildcard $(ADMINWEB_DIR)/**/*)
 	tar -C $(ADMINWEB_DIR)/.. --exclude adminweb/local --exclude adminweb/tmp -cvzf $(CURDIR)/adminweb.tar.gz adminweb
 
@@ -22,7 +36,7 @@ docker-build:
 	$(MAKE) -C $(TOPDIR) docker-env-ready
 	@docker build -t octav/$(APPNAME) .
 
-docker: $(CURDIR)/cpanfile $(CURDIR)/adminweb.tar.gz $(CURDIR)/Octav.pm docker-build
+docker: $(CURDIR)/cpanfile $(CURDIR)/adminweb.tar.gz $(CURDIR)/adminweb-local-lib.tar.gz $(CURDIR)/perl.tar.gz $(CURDIR)/Octav.pm docker-build
 
 publish:
 	$(MAKE) -C $(TOPDIR) gke-publish IMAGE_NAME=$(IMAGE_NAME) APPNAME=$(APPNAME)
