--- a/gke/etc/adminweb-h2o-dev.conf
+++ b/gke/etc/adminweb-h2o-dev.conf
@@ -5,6 +5,7 @@ access-log: /var/log/h2o/access.log
 error-log: /var/log/h2o/error.log
 pid-file: /var/spool/h2o/pid
 http2-reprioritize-blocking-assets: ON
+tcp-fastopen: 0
 proxy.timeout.io: 30000
 hosts:
   "admin.builderscon.io:80":
