--- a/gke/deployment/adminweb.yaml
+++ b/gke/deployment/adminweb.yaml
@@ -28,6 +28,13 @@ spec:
             secretName: adminweb-nginx-dev
       containers:
         - image: asia.gcr.io/builderscon-1248/nginx:20160411.105018
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "100m"
+            limits:
+              memory: "128Mi"
+              cpu: "200m"
           name: proxy
           ports:
             - name: ngx-proxy-http
@@ -45,6 +52,13 @@ spec:
           ports:
             - containerPort: 5000
               protocol: TCP
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "100m"
+            limits:
+              memory: "256Mi"
+              cpu: "200m"
           lifecycle:
             postStart:
               exec:
