--- a/gke/images/slackrouter/Dockerfile
+++ b/gke/images/slackrouter/Dockerfile
@@ -1,6 +1,5 @@
 FROM busybox:latest
-RUN mkdir -p /etc/ssl/certs 
-COPY ca-certificates.crt /etc/ssl/certs/
+VOLUME [ "/etc/ssl/certs" ]
 COPY slackrouter /
 ENTRYPOINT ["/slackrouter"]
 
