--- a/gke/images/deploybot/Dockerfile
+++ b/gke/images/deploybot/Dockerfile
@@ -1,5 +1,5 @@
 FROM busybox:latest
 VOLUME ["/etc/ssl/certs"]
-COPY slackgw /
-ENTRYPOINT ["/slackgw"]
+COPY deploybot /
+ENTRYPOINT ["/deploybot"]
 
