--- a/gke/images/slackrouter/Makefile
+++ b/gke/images/slackrouter/Makefile
@@ -4,7 +4,9 @@ REPOSITORY_HOST=asia.gcr.io
 PROJECT_ID=$(shell gcloud config list 2>&1 | grep 'project = ' | sed -e 's/project = //')
 
 TAG:=$(shell date +"%Y%m%d.%H%M%S")
-IMAGE_NAME:=$(REPOSITORY_HOST)/$(PROJECT_ID)/$(APPNAME):$(TAG)
+IMAGE_NAME_BASE:=$(REPOSITORY_HOST)/$(PROJECT_ID)/$(APPNAME)
+IMAGE_NAME_LATEST:=$(IMAGE_NAME_BASE):latest
+IMAGE_NAME:=$(IMAGE_NAME_BASE):$(TAG)
 
 $(CURDIR)/slackrouter-debug:
 	cd $(TOPDIR)/worker/slackrouter && \
@@ -25,7 +27,10 @@ docker: $(CURDIR)/slackrouter
 	docker build -t octav/slackrouter .
 
 publish:
-	$(MAKE) -C $(TOPDIR) gke-publish IMAGE_NAME=$(IMAGE_NAME) APPNAME=$(APPNAME)
+	$(MAKE) -C $(TOPDIR) gke-publish \
+		IMAGE_NAME_LATEST=$(IMAGE_NAME_LATEST) \
+		IMAGE_NAME=$(IMAGE_NAME) \
+		APPNAME=$(APPNAME)
 
 clean:
 	@-rm slackrouter
