--- a/gke/ingress/admin.builderscon.io.yaml
+++ b/gke/ingress/admin.builderscon.io.yaml
@@ -2,6 +2,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: adminweb-ingress-20160412-091345
+  labels:
+    hostname: admin.builderscon.io
 spec:
   tls:
     - secretName: admin-builderscon-io-20160407-121650
