desperate remote debugging...

--- a/octav/Makefile
+++ b/octav/Makefile
@@ -27,8 +27,8 @@ $(INTERNAL_BIN_DIR)/%: $(INTERNAL_BIN_DIR) internal/cmd/%/*.go
 	go build -o $@ $^
 
 $(INTERNAL_BIN_DIR)/hsup: $(INTERNAL_BIN_DIR)
-	@echo "Building hsup..."
-	@go get -d github.com/lestrrat/go-hsup
+	echo "Building hsup..."
+	go get -d github.com/lestrrat/go-hsup
 	@cd $(shell go list -f '{{ .Dir }}' github.com/lestrrat/go-hsup) && PATH=$(INTERNAL_BIN_DIR):$(PATH) glide install && go build -o $@ cmd/hsup/*.go
 
 glide: $(INTERNAL_BIN_DIR)/glide
