remove directory from prereq

--- a/octav/Makefile
+++ b/octav/Makefile
@@ -25,11 +25,13 @@ hsupsrc:
 $(INTERNAL_BIN_DIR):
 	@mkdir -p $(INTERNAL_BIN_DIR)
 
-$(INTERNAL_BIN_DIR)/%: internal/cmd/%/*.go $(INTERNAL_BIN_DIR) 
+$(INTERNAL_BIN_DIR)/%: internal/cmd/%/*.go
+	@$(MAKE) $(INTERNAL_BIN_DIR)
 	@echo "Building $(@F)..."
 	go build -o $@ $^
 
-$(INTERNAL_BIN_DIR)/hsup: $(INTERNAL_BIN_DIR)
+$(INTERNAL_BIN_DIR)/hsup:
+	@$(MAKE) $(INTERNAL_BIN_DIR)
 	@echo "Building hsup..."
 	@cd $(shell go list -f '{{ .Dir }}' github.com/lestrrat/go-hsup) && PATH=$(INTERNAL_BIN_DIR):$(PATH) glide install && go build -o $@ cmd/hsup/*.go
 
