--- a/octav/glide.yaml
+++ b/octav/glide.yaml
@@ -21,3 +21,7 @@ import:
   - assert
 - package: github.com/lestrrat/go-apache-logformat
 - package: github.com/pkg/errors
+- package: golang.org/x/oauth2
+  subpackages:
+  - google
+- package: google.golang.org/cloud
