--- a/octav/glide.yaml
+++ b/octav/glide.yaml
@@ -25,3 +25,6 @@ import:
   subpackages:
   - google
 - package: google.golang.org/cloud
+- package: golang.org/x/sync
+  subpackages:
+  - errgroup
