Tweak validation for now optional fields
This required upping jsval's deps, but then
glide choked on gcloud's import source, which apparently
has been changed to cloud.google.com/go

--- a/octav/glide.yaml
+++ b/octav/glide.yaml
@@ -24,7 +24,7 @@ import:
 - package: golang.org/x/oauth2
   subpackages:
   - google
-- package: google.golang.org/cloud
+- package: cloud.google.com/go
 - package: golang.org/x/sync
   subpackages:
   - errgroup
