--- a/octav/glide.yaml
+++ b/octav/glide.yaml
@@ -26,3 +26,5 @@ import:
 - package: golang.org/x/sync
   subpackages:
   - errgroup
+- package: gopkg.in/leonelquinteros/gotext.v1
+- package: gopkg.in/mailgun/mailgun-go.v1
